Director class changes

--- a/P2/HTML/director.html
+++ b/P2/HTML/director.html
@@ -17,8 +17,9 @@
     <a href="photos.html">Photos</a>
     <a href="reviews.html">Reviews</a>
 </nav>
-<div class="containerwrapper">
-  <div class="textcontainer"> <!-- text from IMDB -->
+<body>
+<article>
+  <section>   <!-- text from IMDB -->
     <h1>Rajkumar Hirani</h1>
     <p>Rajkumar Hirani (born 20 November 1962), also called Raju Hirani, is an Indian filmmaker, director, producer and editor known for his works in Hindi films. He is the recipient of several accolades, including three National Film Awards and eleven Filmfare Awards. Hirani is referred as one of the most successful filmmakers of Indian cinema. His movies are often lighthearted but revolve around significant societal issues with humour and emotional intelligence.<br>
 
@@ -33,9 +34,11 @@
     <p>Hirani's films are often based on themes which explore particularly different critical social issue like middle class aspirations, reforming, standing up for themselves, fighting for the right thing, relationships among family but with healthy humour and full of emotional quotient. Hirani is editor of all of his films, he himself admitted he enjoys editing film more than anything else. Rajeev Masand said "Like those good old-fashioned Hrishikesh Mukherjee films, Hirani's film reinforced importance of human goodness and basic niceties. Hirani has been cited one of his most favourite film, Mukherjee's Anand (1971). Munna Bhai MBBS deals with corruption of hospital and cruelty of doctors, Lage Raho Munna Bhai deals with Gandhi's thinking and reforming people with soft hearted, 3 Idiots with education system, pressure on students for marks and passion of individuals, PK with religion and superstition and Sanju on relationships and media outrage. Film critic Komal Nahta called Rajkumar Hirani a magician more than a director during reviewing Sanju. He added," He narrates the complex story of a misdirected, ignorant and foolish young man with such sensitivity that the human drama becomes quite a masterpiece of a film."<br>
 
       All of Hirani's films are produced by Vinod Chopra Films. He had one of Chopra's films Mission Kashmir professionally. Hirani has worked consistently with writer Abhijat Joshi since Lage Raho Munna Bhai. Hirani has often cast the same actors in his projects, particularly Sanjay Dutt, who has collaborated with Hirani on three feature films and one film which itself is based on Dutt. Aamir Khan has done two path breaking films with Hirani. Boman Irani has been there in all of Hirani's films in pivotal supporting roles.</p>
-  </div>
-  <img src="directorr.jpg" alt="....." class="containerimg">
-</div>
+  </section>
+</article> 
+
+</body>
+    
 <footer id="footer">
   <p class="text-center">Unofficial website made by Students of Utrecht University.</p>
   <p class="text-center"></p>
