home page article and section id's

--- a/P2/HTML/mainpage.html
+++ b/P2/HTML/mainpage.html
@@ -18,10 +18,12 @@
   <a href="photos.html" tabindex="3">Photos</a>
   <a href="reviews.html" tabindex="4">Reviews</a>
 </nav>
-<div class="containerarticle">
-  <article class="all-sections">
+
+<body>
+<article id="containerarticle">
+  <article id="containertext">
     <h1>About the movie</h1>
-    <article class="section">
+    <section class="homepage-text">
       <h2>Description</h2>
       <p>Two friends are searching for their long lost companion. 
         They revisit their college days and recall the memories of their 
@@ -33,23 +35,26 @@
         are not only present in India, but are characteristic of educational systems at all levels
         all over the world. 
       </p>
-    </article>
-    <article class="section">
+    </section>
+    <section class="homepage-text">
       <h2>Director</h2>
       <p>Rajkumar Hirani</p>
-    </article>
-    <article class="section">
+    </section>
+    <section class="homepage-text">
       <h2>Actors</h2>
       <p>Aamir Khan, Madhavan, Mona Singh</p>
-    </article>
-    <article class="section">
+    </section>
+    <section class="homepage-text">
       <h2>External links</h2>
       <p><a target="_blank" href="https://www.imdb.com/title/tt1187043/" tabindex="5" >IMDB</a></p>
       <p><a target="_blank" href="https://www.rottentomatoes.com/m/3_idiots" tabindex="6">Rotten Tomatoes</a></p>
-    </article>
+    </section>
   </article>
 <img src="3-Idiots.jpg" alt="test">
-</div>
+</article>
+
+</body>
+
 <footer id="footer">
   <p class="text-center">unofficial website made by Students of Utrecht University.</p>
   <p class="text-center"></p>
