wat javascript dingen

--- a/P2/HTML/info.html
+++ b/P2/HTML/info.html
@@ -3,7 +3,11 @@
 <head>
     <link rel="stylesheet" href="../CSS/styles.css">
 	<title>Movie Info</title>
-	<script src="Classes.js"></script>
+	<script src="../JavaScript/Classes.js"></script>
+	<script src="../JavaScript/info_scripts.js"></script>
+	<script>
+		
+	</script>
 </head>
 <body>
 	<header>
@@ -32,7 +36,9 @@
 			</video>
 		</section>
 	</main>
-	<footer>
-		<p>&copy; --- </p>
-	</footer>
+	<footer id="footer">
+		<p class="text-center">Unofficial website made by Students of Utrecht University.</p>
+		<p class="text-center"></p>
+		<p class="text-center">Copyright &copy; Webtech1.com</p>
+	  </footer>
 </body>
