--- a/P2/HTML/mainpage.html
+++ b/P2/HTML/mainpage.html
@@ -50,7 +50,10 @@
       <p><a target="_blank" href="https://www.rottentomatoes.com/m/3_idiots" tabindex="6">Rotten Tomatoes</a></p>
     </section>
   </article>
-<img src="3-Idiots.jpg" alt="test">
+  
+  <img src="3-Idiots.jpg" alt="photo of movie cover">
+
+
 </article>
 
 </body>
