--- a/P2/HTML/test.html
+++ b/P2/HTML/test.html
@@ -33,7 +33,7 @@
       font-size: 14px;
       margin: 10px;
       line-height: 1.4em;
-      height: 4.2em;
+      height: 2vh;
       overflow: hidden;
       text-overflow: ellipsis;
     }
@@ -48,6 +48,7 @@
     position: absolute;
     top: 0;
     left: 0;
+    display: hidden;
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -71,6 +72,7 @@
 
     .movie-card:hover .moviecard-content {
     transform: translateY(0);
+    display: block;
     }
 
   </style>
@@ -116,7 +118,7 @@
     let imgDiv = document.createElement("div");
     imgDiv.classList.add("moviecard-img");
     let img = document.createElement("img");
-    img.src = "../Images/Madhaven 2.svg";
+    img.src = "../Images/Madhaven 2.svg"; // dit moet als parameter 
     img.alt = "Movie Image";
     imgDiv.appendChild(img);
     card.appendChild(imgDiv);
