--- a/P2/HTML/test2.html
+++ b/P2/HTML/test2.html
@@ -1,11 +1,36 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Info</title>
-  <script src="../JavaScript/Classes.js"></script>
-  <script src="../JavaScript/info_scripts.js"></script>
-  <link rel="stylesheet" href="../CSS/styles.css"></style>
+  <head>
+    <title>My Website</title>
+    <style>
+        #content {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        }
+
+        .section {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-bottom: 50px;
+        max-width: 600px;
+        text-align: center;
+        }
+
+        img {
+        margin-top: 20px;
+        max-width: 100%;
+        }
+    </style>
+    <link rel="stylesheet" href="../CSS/styles.css">
 </head>
-<body>
-    
-</body>
+  <header class="header">
+    <h1>3 Idiots</h1>
+    <p><i>A movie by Rajkumar Hirani</i></p>
+  </header>
+  <body>
+    <div id="content"></div>
+    <script src="../JavaScript/test.js"></script>
+  </body>
+</html>
