--- a/P2/HTML/test2.html
+++ b/P2/HTML/test2.html
@@ -2,35 +2,25 @@
 <html>
   <head>
     <title>My Website</title>
-    <style>
-        #content {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        }
-
-        .section {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        margin-bottom: 50px;
-        max-width: 600px;
-        text-align: center;
-        }
-
-        img {
-        margin-top: 20px;
-        max-width: 100%;
-        }
-    </style>
+    <script src="../JavaScript/Classes.js" defer></script>
     <link rel="stylesheet" href="../CSS/styles.css">
 </head>
   <header class="header">
     <h1>3 Idiots</h1>
     <p><i>A movie by Rajkumar Hirani</i></p>
   </header>
+  <nav class="topnavbar">
+    <a href="mainpage.html" tabindex="0">About</a>
+    <a href="actors.html" tabindex="1">Cast</a>
+    <a href="director.html" tabindex="2">Director</a>
+    <a href="photos.html" tabindex="3">Photos</a>
+    <a href="reviews.html" tabindex="4">Reviews</a>
+  </nav>
+  
   <body>
-    <div id="content"></div>
-    <script src="../JavaScript/test.js"></script>
+    
   </body>
 </html>
+
+
+
