--- a/P2/HTML/test2.html
+++ b/P2/HTML/test2.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>My Website</title>
+    <link rel="stylesheet" href="../CSS/styles.css">
+    <title>Info</title>
     <script src="../JavaScript/Classes.js" defer></script>
     <link rel="stylesheet" href="../CSS/styles.css">
 </head>
