--- a/P2/HTML/photos.html
+++ b/P2/HTML/photos.html
@@ -18,6 +18,7 @@
     <a href="director.html">Director</a>
     <a href="photos.html">Photos</a>
     <a href="reviews.html">Reviews</a>
+    <a href="info.html">Info</a>
   </nav>
   
 
