changes nav bar

--- a/P2/HTML/actors.html
+++ b/P2/HTML/actors.html
@@ -16,6 +16,7 @@
     <a href="director.html">Director</a>
     <a href="photos.html">Photos</a>
     <a href="reviews.html">Reviews</a>
+    <a href="info.html">Info</a>
   </nav>
   
   <table>
