--- a/P2/HTML/info.html
+++ b/P2/HTML/info.html
@@ -1,44 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<html>
+  <head>
     <link rel="stylesheet" href="../CSS/styles.css">
-	<title>Movie Info</title>
-	<script src="../JavaScript/Classes.js"></script>
-	<script src="../JavaScript/info_scripts.js"></script>
-	<script>
-		
-	</script>
+    <title>Info</title>
+    <script src="../JavaScript/Classes.js" defer></script>
+    <link rel="stylesheet" href="../CSS/styles.css">
 </head>
-<body>
-	<header>
-		<h1 id="title"></h1>
-	</header>
-	<main>
-		<section>
-			<h2>Movie Info</h2>
-			<ul>
-				<li><strong>Genre:</strong> <span id="genre"></span></li>
-				<li><strong>Year:</strong> <span id="year"><div id="actors-container"></div></span></li>
-				<li><strong>Director:</strong> <span id="director"></span></li>
-				<li><strong>Writers:</strong> <span id="writers"></span></li>
-				<li><strong>Stars:</strong> <span id="stars"></span></li>
-				<li><strong>Plot:</strong> <span id="plot"></span></li>
-			</ul>
-		</section>
-		<section>
-			<h2>Poster</h2>
-			<img id="poster" src="" alt="">
-		</section>
-		<section>
-			<h2>Trailer</h2>
-			<video id="trailer" controls>
-				<source src="" type="">
-			</video>
-		</section>
-	</main>
-	<footer id="footer">
-		<p class="text-center">Unofficial website made by Students of Utrecht University.</p>
-		<p class="text-center"></p>
-		<p class="text-center">Copyright &copy; Webtech1.com</p>
-	  </footer>
-</body>
+  <header class="header">
+    <h1>3 Idiots</h1>
+    <p><i>A movie by Rajkumar Hirani</i></p>
+  </header>
+  <nav class="topnavbar">
+	<a href="mainpage.html">About</a>
+    <a href="actors.html">Cast</a>
+    <a href="director.html">Director</a>
+    <a href="photos.html">Photos</a>
+    <a href="reviews.html">Reviews</a>
+    <a href="info.html">Info</a>
+  </nav>
+  
+  <body>
+
+  </body>
+</html>
