--- a/P2/HTML/mainpage.html
+++ b/P2/HTML/mainpage.html
@@ -17,6 +17,7 @@
   <a href="director.html" tabindex="2">Director</a>
   <a href="photos.html" tabindex="3">Photos</a>
   <a href="reviews.html" tabindex="4">Reviews</a>
+  <a href="info.html" tabindex="5">Info</a>
 </nav>
 
 <body>
