photo in nav weg

--- a/P2/HTML/test2.html
+++ b/P2/HTML/test2.html
@@ -14,8 +14,8 @@
     <a href="mainpage.html" tabindex="0">About</a>
     <a href="actors.html" tabindex="1">Cast</a>
     <a href="director.html" tabindex="2">Director</a>
-    <a href="photos.html" tabindex="3">Photos</a>
-    <a href="reviews.html" tabindex="4">Reviews</a>
+    <a href="reviews.html" tabindex="3">Reviews</a>
+    <a href="info.html" tabindex="4">Info</a>
   </nav>
   
   <body>
