--- a/P2/HTML/actors.html
+++ b/P2/HTML/actors.html
@@ -22,13 +22,13 @@
     <tr>
       <td>
         <figure>
-          <img src="Aamir Khan.svg" alt="Aamir" >
+          <img src="../Images/Aamir Khan.svg" alt="Aamir" >
           <figcaption>Aamir Khan</figcaption>
         </figure>
       </td>
       <td>
         <figure>
-          <img src="Madhaven 2.svg" alt="Madhaven" >
+          <img src="../Images/Madhaven 2.svg" alt="Madhaven" >
           <figcaption>Madhaven</figcaption>
         </figure>
       </td>
@@ -36,13 +36,13 @@
     <tr>
       <td>
         <figure>
-          <img src="Mona Singh 2.svg" alt="Mona" >
+          <img src="../Images/Mona Singh 2.svg" alt="Mona" >
           <figcaption>Mona Singh</figcaption>
         </figure>
       </td>
       <td>
         <figure>
-          <img src="Sharman Joshi.svg" alt="Sharman">
+          <img src="../Images/Sharman Joshi.svg" alt="Sharman">
           <figcaption>Sharman Joshi</figcaption>
         </figure>
       </td>
@@ -50,13 +50,13 @@
     <tr>
     <td>
         <figure>
-          <img src="Kareena Kapoor.svg" alt="Kareena">
+          <img src="../Images/Kareena Kapoor.svg" alt="Kareena">
           <figcaption>Kareena Kapoor</figcaption>
         </figure>
     </td>
     <td>
         <figure>
-        <img src="Omi Vaidya SVG.svg" alt="Omi Vaidya">
+        <img src="../Images/Omi Vaidya SVG.svg" alt="Omi Vaidya">
         <figcaption>Omi Vaidya</figcaption>
         </figure>
     </td>
