--- a/P2/HTML/mainpage.html
+++ b/P2/HTML/mainpage.html
@@ -51,7 +51,7 @@
     </section>
   </article>
   
-  <img src="3-Idiots.jpg" alt="photo of movie cover">
+  <img src="../Images/3-Idiots.jpg" alt="photo of movie cover">
 
 
 </article>
